--- a/SCSS/_cards.scss
+++ b/SCSS/_cards.scss
@@ -56,6 +56,7 @@
         color: $color_gris_claro;
         width: 100%;
         text-align: center;
+        margin-top: 1em;
     }
     .contenedor_btn_card{
         width: 100%;
